--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -66,5 +66,58 @@
   "footerInfo": "Информация",
   "deliveryPayment": "Доставка и оплата",
   "guarantees": "Гарантии",
-  "returns": "Возврат товара"
+  "returns": "Возврат товара",
+  "formTitle": "Оформите заявку и мы вам перезвоним",
+  "formDescription": "Vitae, urna, massa dictumst morbi ut id dui nulla. Purus a velit sem viverra. Nunc ac quis donec nunc eu blandit ante nibh. Sit felis nulla donec mauris quis nulla velit.",
+  "formFields": {
+    "name": "Ваше имя",
+    "company": "Название вашей компании",
+    "phone": "Номер телефона",
+    "product": "Название товара",
+    "quantity": "Количество"
+  },
+  "serviceOptions": {
+    "logo": "Нанесение персонального логотипа (бесплатно)",
+    "help": "Помощь в монтажных работах (бесплатно)"
+  },
+  "submitButton": "Отправить заявку",
+  "howWeWorkTitle": "Как мы работаем",
+  "steps": [
+    {
+      "title": "Оформление заявки",
+      "description": "Вы оставляете заявку на сайте или связываетесь с нами по телефону."
+    },
+    {
+      "title": "Согласование",
+      "description": "Мы консультируем вас, согласовываем стоимость и точное время приезда нашего специалиста."
+    },
+    {
+      "title": "Отправка товара и установка",
+      "description": "Наш специалист по монтажу замков выезжает к вам в точно назначенное время по согласованному адресу."
+    }
+  ],
+  "whyChooseUsTitle": "Почему стоит выбрать нас",
+  "features": [
+    {
+      "title": "Возврат удвоенной стоимости",
+      "description": "За каждый отправленный товар, который окажется бракованным, мы вернем вам двойную стоимость."
+    },
+    {
+      "title": "Монтаж",
+      "description": "Проводим монтажные работы любой сложности и в любое удобное для вас время."
+    },
+    {
+      "title": "Брендирование продукта",
+      "description": "Мы нанесем ваш логотип на нашу продукцию, чтобы она стала более эксклюзивной."
+    }
+  ],
+  "carouselProjectTitle": "Проект для гостиницы Radisson Hotels",
+  "carouselDetails": {
+    "step1": "Установлено 123 вариативных замка Golden Soft для отеля",
+    "step2": "Брендирование нанесено на все замки",
+    "step3": "Проведены монтажные работы и подключение системы"
+  },
+  "carouselBudget": "Бюджет - $5000",
+  "questionsTitle": "Есть вопросы?",
+  "questionsDescription": "Если у вас есть вопросы, не стесняйтесь обращаться. Мы с радостью вам поможем!"
 }
