--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -82,5 +82,43 @@
   "companyRequired": "Введите название компании",
   "phoneRequired": "Введите номер телефона",
   "productRequired": "Введите название товара",
-  "quantityRequired": "Введите количество товара"
+  "quantityRequired": "Введите количество товара",
+  "how_we_work": {
+    "title": "Как мы работаем",
+    "step_1": {
+      "alt": "Step 1",
+      "title": "Оформление заявки",
+      "description": "Вы оставляете заявку на сайте или связываетесь с нами по указанному на сайте номеру телефона"
+    },
+    "step_2": {
+      "alt": "Step 2",
+      "title": "Согласование",
+      "description": "Мы консультируем Вас, согласовываем стоимость и точное время приезда нашего специалиста"
+    },
+    "step_3": {
+      "alt": "Step 3",
+      "title": "Отправка товара и установка",
+      "description": "Наш специалист по монтажу замков выезжает к Вам в точно зазначеное время по согласованному адресу"
+    }
+  },
+  "choose_us": {
+    "title": "Почему стоит выбрать нас",
+    "alt": "Почему стоит выбрать нас",
+    "feature_1": {
+      "title": "Возврат удвоенной стоимости",
+      "description": "За каждый отправленный товар который окажется бракованным, мы вернем вам двойную стоимость."
+    },
+    "feature_2": {
+      "title": "Монтаж",
+      "description": "Проводим монтажные работы любой сложности и в любое удобное для Вас время."
+    },
+    "feature_3": {
+      "title": "Брендирование продукта",
+      "description": "Мы нанесем Ваш логотип любой сложности на свою продукцию, чтобы прибавить ей эксклюзивности."
+    },
+    "feature_4": {
+      "title": "Брендирование продукта",
+      "description": "Мы нанесем Ваш логотип любой сложности на свою продукцию, чтобы прибавить ей эксклюзивности."
+    }
+  }
 }
