--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -59,7 +59,6 @@
   "categories": "Категории",
   "forHotels": "Для отелей",
   "forCabinets": "Для шкафчиков",
-  "goTo": "Перейти",
   "forOffices": "Для офисов",
   "locksForHome": "Замки для дома",
   "allCategories": "Все категории",
@@ -120,5 +119,6 @@
       "title": "Брендирование продукта",
       "description": "Мы нанесем Ваш логотип любой сложности на свою продукцию, чтобы прибавить ей эксклюзивности."
     }
-  }
+  },
+  "goTo": "Перейти"
 }
