--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -114,5 +114,6 @@
       "title": "Mahsulotni brend qilish",
       "description": "Biz sizning logotipingizni har qanday murakkablikda mahsulotlarga joylashtiramiz, shunda ular yanada eksklyuziv bo'ladi."
     }
-  }
+  },
+  "goTo": "O'tish"
 }
