--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -120,5 +120,18 @@
       "description": "Мы нанесем Ваш логотип любой сложности на свою продукцию, чтобы прибавить ей эксклюзивности."
     }
   },
-  "goTo": "Перейти"
+  "goTo": "Перейти",
+
+  "feature1_title": "Возврат удвоенной стоимости",
+  "feature1_desc": "За каждый отправленный товар который окажется бракованным, мы вернем вам двойную стоимость.",
+  "feature2_title": "Монтаж",
+  "feature2_desc": "Проводим монтажные работы любой сложности и в любое удобное для Вас время.",
+  "feature3_title": "Брендирование продукта",
+  "feature3_desc": "Мы нанесем Ваш логотип любой сложности на свою продукцию, чтобы прибавить ей эксклюзивности.",
+  "project_title": "Проект для гостиницы Radisson Hotels",
+  "logo_alt": "Проект для гостиницы Radisson Hotels",
+  "installed_locks": "Установлено 123 Вариативных замка Golden Soft для отеля",
+  "branding_applied": "Было нанесено личный брендинг на все замки",
+  "installation_completed": "Были проведены монтажные работы, также была произведена помощь в подключении замков к системе",
+  "budget": "Бюджет - $5000"
 }
